# Looptrader-Web

./: .envsample  .gitignore  Dockerfile  README.md  docker-compose.standalone.yml  docker-compose.yml  migrate_trailing_stop.py  pyproject.toml  start.sh  test_positions.py  test_risk.py
config/: threshold_config.json  threshold_config.json.example
data/: threshold_state.json
scripts/: README.md  threshold_monitor.py
src/looptrader_web/: app.py  app.py.backup
src/looptrader_web/models/: __init__.py  database.py
src/looptrader_web/services/: __init__.py  smarttrail.py
src/looptrader_web/templates/: base.html  dashboard.html
src/looptrader_web/templates/accounts/: list.html
src/looptrader_web/templates/analytics/: analytics.html
src/looptrader_web/templates/auth/: login.html
src/looptrader_web/templates/bots/: detail.html  list.html
src/looptrader_web/templates/errors/: 404.html  500.html
src/looptrader_web/templates/positions/: list.html  list_enhanced.html
src/looptrader_web/templates/pricing/: index.html
src/looptrader_web/templates/risk/: risk.html
src/looptrader_web/templates/smart_monitor/: index.html
src/looptrader_web/templates/trailing_stops/: add.html  list.html
