[tool.poetry]
name = "looptrader-web"
version = "1.0.0"
description = "AdminLTE-based Web Management Interface for LoopTrader Pro"
authors = ["LoopTrader Team"]
readme = "README.md"
packages = [{include = "looptrader_web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.0"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.0"
flask-login = "^0.6.3"
wtforms = "^3.1.0"
flask-wtf = "^1.2.0"
schwab-py = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
